# psdparser

./: BUILDING.txt  Makefile.am  Makefile.in  Makefile.unix  README.md  README.txt  channel.c  configure  configure.ac  constants.c  cwprefix.h  cwprefix_dump.h  descriptor.c  duotone.c  example.c  extra.c  getopt.c  icc.c  main.c  mkdir_unimpl.c  mmap.c  mmap_win.c  nmake.mak  packbits.c  pdf.c  plugin.c  pngresize.c  psd.c  psd2xcf.c  psd_zip.c  psdparse.h  psdparse.make  psdparse_68k.make  rebuild.c  resources.c  scavenge.c  unpackbits.c  usage.txt  util.c  version.h  (+6 more)
doc/: 模板图层坐标系统.vsd
include/win32/sys/: cdefs.h  errno.h
lib/win32/Debug/: libpng.lib
lib/win32/Release/: libpng.lib  zlib.lib
